syntax = "proto3";

package pb;

option go_package = "internal/infra/grpc/pb";

message CreateOrderRequest {
    string id = 1;
    float price = 2;
    float tax = 3;
}

message CreateOrderResponse {
    string id = 1;
    float price = 2;
    float tax = 3;
    float final_price = 4;
}

message FindAllOrderRequest {
    string page = 1;   
    int32 limit = 2;
    string sort = 3;
}

message FindAllOrderResponse {
    string id = 1;
    float price = 2;
    float tax = 3;
    float final_price = 4;
}

message FindAllOrdersResponse {
    repeated FindAllOrderResponse orders = 1; // Resposta para múltiplos pedidos
}

// Serviço
service OrderService {
    rpc CreateOrder(CreateOrderRequest) returns (CreateOrderResponse);
    rpc ListOrders(FindAllOrderRequest) returns (FindAllOrdersResponse); // Certifique-se de que isso esteja correto
}
